--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
@@ -32,4 +33,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.yahoo.squidb:squidb:2.0.0'
+    compile 'com.yahoo.squidb:squidb-annotations:2.0.0'
+    apt 'com.yahoo.squidb:squidb-processor:2.0.0'
 }
